// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate custom scalars for native and custom types using casual 1`] = `
"
export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : 82,
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : 'ea corrupti qui incidunt eius consequatur blanditiis',
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'Kelly_Cremin@Turcotte.biz',
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : -93,
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : -24.509902694262564,
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};
"
`;

exports[`should generate custom scalars for native and custom types using faker 1`] = `
"
export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : 83,
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : 'Corrupti qui incidunt eius consequatur qui.',
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'Orlando64@gmail.com',
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : -93,
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : -24.51,
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};
"
`;
